Fixed maintenance for duplicate profiles as well